--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <!-- Custom CSS file -->
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      <script src="./trigger.js"></script>
+      <script src="./trigger.js">
     />
   </head>
   <body>    
