--- a/index.html
+++ b/index.html
@@ -8,38 +8,40 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
       <!-- Custom CSS file -->
       <link rel="stylesheet" href="styles.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-      <script src="./trigger.js">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"      
     />
   </head>
   <body>    
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#works">Works</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#hobbies">Hobbies</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
-                </li>
-            </ul>
-            </div>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+      <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#experience">Experience</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#hobbies">Hobbies</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#testimonies">Testimonies</a>
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Me</a>
+              </li>
+          </ul>
+          </div>
+      </div>
+  </nav>  
 
     <!-- About Section -->    
-    <section id="about" class="mt-35 pt-5 pb-5">
+    <section id="about" class="pt-5 pb-5">
         <div class="container">
             <div class="row align-items-center">
             <div class="col-md-6 mb-4 mb-md-0">
