updated pictures and desc on Hobbies

--- a/index.html
+++ b/index.html
@@ -102,8 +102,44 @@
                 </div>
             </div>
         </div>
-    </section>      
-  
+    </section>     
+
+    <!-- Hobbies Section -->
+    <section id="hobbies" class="py-5 text-center">
+      <div class="container">
+        <h2 class="mb-5">Hobbies</h2>
+        <div class="row justify-content-center">
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img src="hobby-1.jpg" class="card-img-top h-100" alt="Hobby 1">
+              <div class="card-body">
+                <h5 class="card-title">Hobby 1</h5>
+                <p class="card-text">Description of Hobby 1</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img src="hobby-2.jpg" class="card-img-top h-100" alt="Hobby 2">
+              <div class="card-body">
+                <h5 class="card-title">Hobby 2</h5>
+                <p class="card-text">Description of Hobby 2</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img src="hobby-3.jpg" class="card-img-top h-100" alt="Hobby 3">
+              <div class="card-body">
+                <h5 class="card-title">Hobby 3</h5>
+                <p class="card-text">Description of Hobby 3</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Testimonies Section -->
     <section id="testimonies" class="py-5 bg-white">
         <div class="container">
