--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row align-items-center">
             <div class="col-md-6 mb-4 mb-md-0">
-                <h2 class="mb-4">Darwin Arajani</h2>
+                <h2 class="mb-4">Wilson Ponseca</h2>
                 <p class="lead">Hello and welcome to my portfolio webpage! I am a skilled software engineer with 5 years of experience creating user interfaces and developing online applications. My interest in technology and problem solving has motivated me to consistently broaden my skill set and stay current with industry developments. I seek to create intuitive and elegant solutions to complicated challenges by focusing on clean code and user-centered design. Please check over my work and contact me if you have any questions or want to collaborate.</p>
             </div>
             <div class="col-md-6 d-flex justify-content-center">
