--- a/index.html
+++ b/index.html
@@ -111,28 +111,28 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="hobby-1.jpg" class="card-img-top h-100" alt="Hobby 1">
+              <img src="./images/manga.jpg" class="card-img-top h-100" alt="Read Manga">
               <div class="card-body">
-                <h5 class="card-title">Hobby 1</h5>
-                <p class="card-text">Description of Hobby 1</p>
+                <h5 class="card-title">Read Manga</h5>
+                <p class="card-text">"Manga has stolen my heart, and titles like Magi and Sinbad have me captivated with their colorful storytelling and endearing characters."</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="hobby-2.jpg" class="card-img-top h-100" alt="Hobby 2">
+              <img src="./images/anime.jpg" class="card-img-top h-100" alt="Watch Anime">
               <div class="card-body">
-                <h5 class="card-title">Hobby 2</h5>
-                <p class="card-text">Description of Hobby 2</p>
+                <h5 class="card-title">Watch Anime</h5>
+                <p class="card-text">"My passion for anime knows no bounds, as I have been captivated by the adventurous exploits of beloved series such as Naruto, Bleach, and One Piece."</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
-              <img src="hobby-3.jpg" class="card-img-top h-100" alt="Hobby 3">
+              <img src="./images/gaming.jpg" class="card-img-top h-100" alt="Gaming">
               <div class="card-body">
-                <h5 class="card-title">Hobby 3</h5>
-                <p class="card-text">Description of Hobby 3</p>
+                <h5 class="card-title">Gaming</h5>
+                <p class="card-text">"Having been a passionate gamer since the age of four, I am eagerly awaiting the release of Hogwarts Legacy on PS4, which promises to offer another immersive and thrilling gaming experience that I am excited to dive into."</p>
               </div>
             </div>
           </div>
