adjusted hobbies section

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                         </li>
                         <li class="timeline-item animate__animated animate__fadeInLeft animate__delay-1s animation-trigger">
                         <div class="timeline-badge bg-dark"><i class="fas fa-briefcase"></i></div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                            <h4 class="timeline-title">Intern at Company C</h4>
-                            <p><small><i class="far fa-clock"></i> 2016 - 2017</small></p>
-                            </div>
-                            <div class="timeline-body">
-                            <p>Assisted in the development of a mobile app using React Native. Participated in code reviews and bug fixing. Learned how to work with Git and GitHub for version control.</p>
-                            </div>
-                        </div>
+                          <div class="timeline-panel">
+                              <div class="timeline-heading">
+                                <h4 class="timeline-title">Intern at Company C</h4>
+                                <p><small><i class="far fa-clock"></i> 2016 - 2017</small></p>
+                              </div>
+                              <div class="timeline-body">
+                                <p>Assisted in the development of a mobile app using React Native. Participated in code reviews and bug fixing. Learned how to work with Git and GitHub for version control.</p>
+                              </div>
+                          </div>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +104,7 @@
         </div>
     </section>     
 
-    <!-- Hobbies Section -->
+<!-- Hobbies Section -->
     <section id="hobbies" class="py-5 text-center">
       <div class="container">
         <h2 class="mb-5">Hobbies</h2>
@@ -112,27 +112,36 @@
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img src="./images/manga.jpg" class="card-img-top h-100" alt="Read Manga">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Read Manga</h5>
-                <p class="card-text">"Manga has stolen my heart, and titles like Magi and Sinbad have me captivated with their colorful storytelling and endearing characters."</p>
+                <p class="card-text flex-grow-1">"Manga has stolen my heart, and titles like Magi and Sinbad have me captivated with their colorful storytelling and endearing characters."</p>
+              </div>
+              <div class="card-footer">
+                <hr class="my-0">
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img src="./images/anime.jpg" class="card-img-top h-100" alt="Watch Anime">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Watch Anime</h5>
-                <p class="card-text">"My passion for anime knows no bounds, as I have been captivated by the adventurous exploits of beloved series such as Naruto, Bleach, and One Piece."</p>
+                <p class="card-text flex-grow-1">"My passion for anime knows no bounds, as I have been captivated by the adventurous exploits of beloved series such as Naruto, Bleach, and One Piece."</p>
+              </div>
+              <div class="card-footer">
+                <hr class="my-0">
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img src="./images/gaming.jpg" class="card-img-top h-100" alt="Gaming">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Gaming</h5>
-                <p class="card-text">"Having been a passionate gamer since the age of four, I am eagerly awaiting the release of Hogwarts Legacy on PS4, which promises to offer another immersive and thrilling gaming experience that I am excited to dive into."</p>
+                <p class="card-text flex-grow-1">"Having been a passionate gamer since the age of four, I am eagerly awaiting the release of Hogwarts Legacy on PS4, which promises to offer another immersive and thrilling gaming experience that I am excited to dive into."</p>
+              </div>
+              <div class="card-footer">
+                <hr class="my-0">
               </div>
             </div>
           </div>
@@ -148,18 +157,18 @@
             <h2 class="mb-5 text-center">Testimonies</h2>
             <div class="row">
                 <div class="col-md-6">
-                <div class="timeline-item animate__animated animate__fadeInLeft animate__delay-1s animation-trigger">
-                    <div class="timeline-panel">
-                    <div class="timeline-body">
-                        <p>"Working with you, Darwin, on our recent project was a pleasure. As a Senior Quality Analyst, your exceptional attention to detail and deep understanding of our project requirements were truly remarkable. 
-                          Your meticulous approach and excellent communication skills were instrumental in ensuring the project's successful completion within the given time frame. Your ability to quickly identify and resolve issues, 
-                          along with your proactive approach to anticipating potential problems, greatly contributed to our success. Overall, I highly recommend you to anyone looking for a reliable and knowledgeable 
-                          Senior Quality Analyst."</p>
-                        <h5 class="mt-3 mb-0">- Jane Doe</h5>
-                        <p class="text-muted">Client at Company A</p>
-                    </div>
-                    </div>
-                </div>
+                  <div class="timeline-item animate__animated animate__fadeInLeft animate__delay-1s animation-trigger">
+                      <div class="timeline-panel">
+                        <div class="timeline-body">
+                            <p>"Working with you, Darwin, on our recent project was a pleasure. As a Senior Quality Analyst, your exceptional attention to detail and deep understanding of our project requirements were truly remarkable. 
+                              Your meticulous approach and excellent communication skills were instrumental in ensuring the project's successful completion within the given time frame. Your ability to quickly identify and resolve issues, 
+                              along with your proactive approach to anticipating potential problems, greatly contributed to our success. Overall, I highly recommend you to anyone looking for a reliable and knowledgeable 
+                              Senior Quality Analyst."</p>
+                            <h5 class="mt-3 mb-0">- Jane Doe</h5>
+                            <p class="text-muted">Client at Company A</p>
+                        </div>
+                      </div>
+                  </div>
                 </div>
                 <div class="col-md-6">
                 <div class="timeline-item animate__animated animate__fadeInRight animate__delay-1s animation-trigger">
